[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "optuna_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
optuna-pipeline = "optuna_pipeline.__main__:main"

[tool.kedro]
package_name = "optuna_pipeline"
project_name = "optuna_pipeline"
kedro_init_version = "0.19.1"
tools = "[]"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "optuna_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
